--- a/client/package.json
+++ b/client/package.json
@@ -1,11 +1,13 @@
 {
-  "name": "ccptpm-frontend",
+  "name": "client",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:5000",
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "axios": "^1.6.2"
   },
   "scripts": {
     "start": "react-scripts start",
